Fiffi POS 17.06.2020
Scoreboard fast fertig + wieda wos bei layouts